# atomes-GNU

./: AUTHORS  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTORS.md  ChangeLog  Makefile.am  Makefile.in  NEWS  NEWS.md  README.md  atomes.spec  codemeta.json  config.h.in  configure  configure.ac  lic  test.1
Contributing-tutorials/New-analysis/: .STEP-1.md.swp  STEP-1.md
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: Makefile.in
locale/: Makefile.am  Makefile.in
locale/en/: atomes-messages.po
locale/fr/: atomes-messages.po
man/: Makefile.am  Makefile.in
metadata/: .fr.ipcms.atomes.appdata.xml.swp  fr.ipcms.atomes.appdata.xml
misc/win/: atomes-latest-no-win.iss  atomes-latest-win.iss
src/: Makefile.am  Makefile.in  bind.h  config.h  global.c  global.h
src/calc/: calc.c
src/curve/: cedit.c  curve.c  datab.c  m_curve.c  tab-1.c  tab-2.c  tab-3.c  tab-4.c  title.c  w_curve.c  w_data.c  w_img.c
src/fortran/: bonds.F90  dmtx.F90  initchains.F90  molecules.F90  parameters.F90  prepdata.F90  writedata.F90
src/gui/: bdcall.c  calc_menu.c  callbacks.c  chainscall.c  edit_menu.c  grcall.c  gtk-misc.c  gui.c  initc.c  interface.c  interface.h  main.c  msdcall.c  preferences.c  ringscall.c  sktcall.c  spcall.c  sqcall.c  tools.c  work_menu.c
src/opengl/: glview.c  glview.h  glwin.h  ogl_draw.c  ogl_shading.c
src/project/: close_p.c  init_p.c  open_p.c  project.h  read_bond.c  read_curve.c  read_field.c  read_mol.c  read_opengl.c  read_qm.c  save_bond.c  save_curve.c  save_field.c  save_mol.c  save_opengl.c  save_p.c  (+2 more)
(+105 files in other folders)
